--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.4",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
@@ -25,4 +27,3 @@
     "vite": "^5.0.0"
   }
 }
-
